apply button function add

--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@
                 <p class="text-base font-medium">BDT <span id="total-rice">0</span></p>
               </div>
 
-              <div class="relative">
-                <input type="text" placeholder="Have any copupon?" class="input w-full max-w-xs" />
-                <div class="absolute right-4 top-0"><button class="btn bg-green-500">Apply</button></div>
+              <div id="coupon-field" class="relative hidden">
+                <input id="inpt-field" type="text" placeholder="Have any copupon?" class="input w-full max-w-xs" />
+                <div class="absolute right-1 top-0"><button onclick="apply()" id="apply-btn" class="btn bg-green-500 ">Apply</button></div>
               </div>
 
               <div class="flex justify-between my-4">
                 <p class="text-base font-medium">GrandTotal</p>
-                <p class="text-base font-medium">BDT <span id="grand-total">1100</span></p>
+                <p class="text-base font-medium">BDT <span id="grand-total">0</span></p>
               </div>
 
             </div>
@@ -283,7 +283,7 @@
               <input type="email" placeholder="Enter your email id" class="input input-bordered w-full max-w-xs" />
               
             </div>
-            <div class="my-6"><button class="btn bg-green-500 w-full">Apply</button></div>
+            <div class="my-6 "><button id="applybtn" class="btn bg-green-500 w-full ">Apply</button></div>
             <div class="flex gap-10 underline underline-offset-1">
               <a href="">Terms and Conditions</a>
               <a href="">Cancellation Policy</a>
