total discount js function add

--- a/index.html
+++ b/index.html
@@ -262,6 +262,10 @@
                 <p class="text-base font-medium">BDT <span id="total-rice">0</span></p>
               </div>
 
+              <ul id="discount-ul">
+               
+              </ul>
+
               <div id="coupon-field" class="relative hidden">
                 <input id="inpt-field" type="text" placeholder="Have any copupon?" class="input w-full max-w-xs" />
                 <div class="absolute right-1 top-0"><button onclick="apply()" id="apply-btn" class="btn bg-green-500 ">Apply</button></div>
@@ -283,7 +287,7 @@
               <input type="email" placeholder="Enter your email id" class="input input-bordered w-full max-w-xs" />
               
             </div>
-            <div class="my-6 "><button id="applybtn" class="btn bg-green-500 w-full ">Apply</button></div>
+            <div class="my-6 "><button id="applybtn" class="btn bg-green-500 w-full ">Next</button></div>
             <div class="flex gap-10 underline underline-offset-1">
               <a href="">Terms and Conditions</a>
               <a href="">Cancellation Policy</a>
