--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         </section>
     </header>
     <!-- main section start -->
-    <main class="">
+    <main>
         <!-- Best offer section -->
         <section class="text-center flex flex-col justify-center items-center container mx-auto">
             <div class="my-12 * text-[40px] font-bold"><h1>Best offers for you</h1></div>
 
-            <div class="space-y-3 lg:flex gap-6">
+            <div class="space-y-3 flex flex-col lg:flex-row gap-6">
                 <!-- card-1 -->
-                <div  class="bg-yellow-500 flex  items-center gap-40 relative py-12 px-12 rounded-3xl">
+                <div  class="bg-yellow-500 flex  items-center gap-10 lg:gap-40 relative py-10 lg:py-12 px-8 lg:px-12 rounded-3xl">
                     <div>
                         <h1 class="text-4xl font-black">15% OFF</h1>
                         <h4 class="text-xl font-semibold">on your next purchase</h4>
@@ -74,7 +74,7 @@
                 </div>
                 
                 <!-- card-2 -->
-                <div  class="bg-[#F78C9C] flex items-center gap-40 relative py-12 px-12 rounded-3xl">
+                <div  class="bg-[#F78C9C] flex items-center gap-10 relative py-10 lg:py-12 px-8 lg:px-12 rounded-3xl">
                   <div>
                       <h1 class="text-4xl font-black">20% OFF</h1>
                       <h4 class="text-xl font-semibold">on your next purchase</h4>
@@ -97,7 +97,7 @@
             <p class="text-lg font-normal leading-7 my-6">Yes, you can run unit tests and view the results directly within the app. The integrated <br> testing features allow for a streamlined .</p>
           </div>
           
-          <article class="bg-white flex justify-between items-center p-8 rounded-3xl container relative mx-auto">
+          <article class="bg-white flex flex-col lg:flex-row justify-between items-center p-8 rounded-3xl container relative mx-auto">
             <!-- child -1 s -->
             <div class=" p-">
 
@@ -166,7 +166,7 @@
             <div class="absolute right-96"><img src="images/info-devider.png" alt=""></div>
           </article>
 
-          <article class="container bg-white mx-auto flex gap-14 justify-between p-8 rounded-3xl mt-5">
+          <article class="container bg-white mx-auto flex flex-col lg:flex-row gap-14 justify-between p-8 rounded-3xl mt-5">
             <!-- parent div-1 -->
             <div class="relative flex-1">
 
@@ -208,7 +208,7 @@
                 </svg>
                 </div>
                 <!-- 3rd div  ..2child-->
-                <div class="mt-24 flex justify-between">
+                <div class="mt-24 flex  justify-between">
                   <!-- parent-1 -->
                   <div class="">
                     <div class="flex flex-col justify-center items-center gap-6">
